mule-user-guide/v/3.3/soap-component-reference.adoc
=  SOAP组件参考

*SOAP Component*有助于在Mule流中发布，使用和代理*SOAP Web Services*。

Mule利用Apache的开源 http://cxf.apache.org/docs/a-simple-jax-ws-service.html[CXF框架]构建Web服务。您可以在Studio中创建CXF Web服务，方法是在您的Mule流中配置SOAP组件，以执行以下CXF Web服务操作：

* 发布一个简单的服务
* 发布JAX-WS服务
* 代理已发布的服务
* 使用简单的客户端来使用服务
* 使用JAX-WS客户端来使用服务
* 代理服务

使用Mule的SOAP组件，您还可以 link:/mule-user-guide/v/3.6/enabling-ws-security[启用WS安全]，指定数据绑定并将拦截器添加到您的CXF Web服务。有关Mule如何利用CXF框架的更多信息，请参阅 link:/mule-user-guide/v/3.6/cxf-module-configuration-reference[CXF模块配置参考]。

== 添加SOAP组件/ CXF元素

<<Complete Code Example>>

[WARNING]
====
*Mule Studio Version 3.3.1*支持下列类型的Web服务*Operations*中的更正的数据绑定：

* 简单的服务
*  JAX-WS服务
* 简单的客户端
*  JAX-WS客户端

*Mule Studio Version 3.3.0*支持以下类型的Web服务*Operations*中的数据绑定：

* 简单的服务
*  JAX-WS服务
* 代理服务
====

[tabs]
------
[tab,title="Stuio Visual Editor"]
....
. Add a SOAP component to your flow, positioning it just after an inbound endpoint, or just before an outbound endpoint.
. Open the component's *Pattern Properties* panel, then configure the endpoint's basic attributes according to the table below. +
+
[%header%autowidth.spread]
|===
|Field |Value
|*Display Name* |Enter a unique name for the component, if you wish.
|*Operation* |JAX-WS service (_default_) +
Proxy service +
Simple service +
JAX-WS client +
Proxy client +
Simple client
|===

. The configurable elements and attributes of the SOAP component vary according to the type of operation the Web service is performing. Consult the sub-sections below for detailed configuration information.
....
[tab,title="Studio XML Editor or Standalone"]
....
. Add a CXF element to your flow, positioning it just after an inbound endpoint, or just before an outbound endpoint (see code sample below). The types of CXF element available are as follows:

* cxf:jaxws-service
* cxf:proxy-service
* cxf:simple-service
* cxf:jaxws-client
* cxf:proxy-client
* cxf:simple-client

. Configure the endpoint's basic attributes according to the table below.
+
[%header%autowidth.spread]
|===
|Attribute |Value
|*doc:name* |unique name for component (not required for Mule Standalone)
|===
+

[source, code, linenums]
----
#Publishing
     
<flow name="example_flow1" doc:name="example_flow1">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="HTTP"/>
        <cxf:jaxws-service doc:name="SOAP"/>
</flow>
  
     
#Consuming
  
<flow name="example_flow2" doc:name="example_flow2">
    <cxf:jaxws-client doc:name="SOAP"/>
    <http:outbound-endpoint exchange-pattern="one-way" host="localhost" port="8081" method="POST" doc:name="HTTP"/>
</flow>
    
    
#Proxying
    
<flow name="example_flow1" doc:name="example_flow1">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="HTTP"/>
        <cxf:proxy-service doc:name="SOAP"/>
</flow>
----

. The configurable elements and attributes of the SOAP component vary according to the type of operation the Web service is performing. Consult the sub-sections below for detailed configuration information.

[NOTE]
In 3.x versions of Mule Studio, you could specify an *onException* attribute for your SOAP Component. +
As of Mule 3.3 — because of the improvements to error handling which manage exceptions — you do not need to specify an *onException* attribute.
....
------

== 应用全局CXF配置

要设置和重用自定义的CXF行为，您必须创建一个*global element*并在您的Mule流中的SOAP组件中引用它。以下配置信息适用于所有类型的Web服务操作（服务，客户端和代理）。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. On your canvas, click the *Global Elements* tab, then click the *Create* button, then select `CXF Configuration` from the list of available options. 
+

[NOTE]
You can also create a *Global CXF Element* directly from the SOAP component's *Pattern Properties* panel. Next to the *Config Reference* field, click the image:add.png[(plus)] icon to open the *Global Element Properties* panel.
+
. Configure the global CXF configuration attributes according to the table below.
+
[%header%autowidth.spread]
|===
|Field |Value |Description
|*Name* |unique name |Enter a unique name for the global element, if you wish.
|*Configuration Location* |filepath/filename.xml |If you have created an `.xml` file that supplies the specifics of how you want your CXF elements to behave, enter the file path of your CXF configuration file.
|*Enable Mule Soap Headers* |true (_default_) +
false  |If set to true (i.e. checked) this attribute ensures that Mule can add a header to a SOAP message when required as part of the message's processing. +
For example, if your SOAP messages will be processed by a third-party schema which prohibits deviations from very specific message properties and will not process messages with Mule headers, set this attribute to false (i.e. uncheck).
|*Initialize Static Bus Instance* |true (_default_) +
false  |If set to true, (i.e. checked) this attribute ensures that the CXF Web service uses Mule transports instead of http://cxf.apache.org/docs/transports.html[CXF transports].
|===
. Click the *Message Flow* tab to return to your canvas.
. Open the Pattern Properties panel of the SOAP component, again.
. Use the drop down menu in the *Config Reference* field to select the global CXF element you created.
+
. Click *OK* to save your changes to the SOAP component.
....
[tab,title="Studio XML Editor or Standalone"]
....
. Above all flows in your Mule project, add a global cxf:configuration element. Refer to code sample below.
. Configure the global CXF configuration attributes according to the table below.
+
[%header%autowidth.spread]
|====
|Attribute |Value |Description
|*name* |unique name |Enter a unique name for the global element, if you wish. (not required for Mule Standalone)
|*enableMuleSoapHeaders* |true +
false  |If set to true`,` this attribute ensures that Mule can add a header to a SOAP message when required as part of the message's processing. +
For example, if your SOAP messages will be processed by a third-party schema which prohibits deviations from very specific message properties and will not process messages with Mule headers, set this attribute to false.
|*initializeStaticBusInstance* |true +
false  |If set to true, (i.e. checked) this attribute ensures that the CXF Web service uses Mule transports instead of http://cxf.apache.org/docs/transports.html[CXF transports].
|*configurationLocation* |filepath/filename.xml |If you have created an `.xml` file that supplies the specifics of how you want your CXF elements to behave, enter the file path of your CXF configuration file.
|====
. To the CXF element within your flow, add a `configuration-ref` attribute to reference the global CXF configuration element. Refer to code sample below.

[source, xml, linenums]
----
<cxf:configuration name="CXF_Configuration" enableMuleSoapHeaders="true" initializeStaticBusInstance="true" doc:name="CXF Configuration" configurationLocation="src/test/resources/filename.xml"/>
 
<flow name="example_flow1" doc:name="example_flow1">
...
    <cxf:jaxws-client doc:name="SOAP" configuration-ref="CXF_Configuration"/>
    <http:outbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" method="POST" doc:name="HTTP"/>
</flow>
----

.Namespace

[source, xml, linenums]
----
<mule xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" 
... 
xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd">
----

....
------

== 发布Web服务

本小节介绍如何为您的Web服务指定属性。

[NOTE]
====
对于某些属性，请根据用于开发Web服务的 http://en.wikipedia.org/wiki/Web_service#Automated_design_methodologies[自动化设计方法]输入数据：

* 自下而上的方法（代码优先）
* 自顶向下的方法（首先是WSDL）
====

[tabs]
------
[tab,title="Studio Visual Editor"]
....
In the *General* tab of the SOAP component's pattern properties panel, configure the Web service's attributes according to the table below.
+
[%header,cols="5*"]
|=====
|Attribute |Simple service |JAX-WS service |Proxy service |Value
|*Binding ID* a|
x

 a|
x

 a|
x

 |Specify the http://cxf.apache.org/docs/cxf-architecture.html#CXFArchitecture-DataBindings[CXF Protocol Bindings] which facilitate the mapping of concrete formats and protocols on transports.
|*Port* a|
x

 a|
x

 a|
x

 |• *Code first*: specify the the port generated in the WSDL. +
 • *WSDL first*: specify the port to which the Java class will bind in the WSDL.
|*Namespace* a|
x

 a|
x

 a|
x

 |• *Code first*: specify the the SOAP namespace generated in the WSDL. Overrides default CXF namespace. +
 • *WSDL first*: specify the SOAP namespace to which the Java class will bind in the WSDL. Overrides default CXF namespace.
|*Service †* a|
x

 a|
x

 a|
x

 |• *Code first*: where more than one service exists, specify the the service generated in the WSDL. +
 • *WSDL first*: where more than one service exists, specify the service to which the Java class will bind to the WSDL.
|*Service Class †* a|
x

 a|
x

 a|
x

 |• *Code first*: click the ellipsis (. . .) to specify the Web service interface to which the Java class will bind to the WSDL. +
 • *WSDL first*: click the *Generate from WSDL* button to specify the location of the WSDL document (URL or file) Mule should use to identify the service interface. In the *Generate from WSDL* panel that appears, specify both the location and the *Package Name* of the source.
|*Validation Enabled* a|
x

 a|
x

 a|
x

 |Set to true (i.e. checked) if you want Mule to perform schema validation on all incoming messages.
|*Payload* |  |  a|
x

 |Use the drop down menu to select how much of the message should pass through the proxy. (By default, Mule selects `body`.) +
• *body*: Mule passes only the body of the message through the proxying Web service. +
• *envelope*: Mule passes the entire envelope of the message, including body and headers, through the proxying Web service.
|=====

† mutually exclusive fields
....
[tab,title="Studio XML Editor or Standalone"]
....
Configure your cxf:jaxws-service, cxf:`proxy-service`, or cxf:simple-service attributes according to the table below. Refer to the code sample below.

[%header,cols="5*"]
|=====
|Attribute |Simple service |JAX-WS service |Proxy service |Value
|*bindingId* a|
x

 a|
x

 a|
x

 |Specify the http://cxf.apache.org/docs/cxf-architecture.html#CXFArchitecture-DataBindings[CXF Protocol Bindings] which facilitate the mapping of concrete formats and protocols on transports.
|*namespace* a|
x

 a|
x

 a|
x

 |• *Code first*: specify the the SOAP namespace generated in the WSDL. Overrides default CXF namespace. +
 • *WSDL first*: specify the SOAP namespace to which the Java class will bind in the WSDL. Overrides default CXF namespace.
| *port* a|
x

 a|
x

 a|
x

 |• *Code first*: specify the the port generated in the WSDL. +
 • *WSDL first*: specify the port to which the Java class will bind in the WSDL.
|*service †* a|
x

 a|
x

 a|
x

 |• *Code first*: where more than one service exists, specify the the service generated in the WSDL. +
 • *WSDL first*: where more than one service exists, specify the service to which the Java class will bind to the WSDL.
|*serviceClass †* a|
x

 a|
x

 a|
x

 |• *Code first*: specify the Web service interface to which the Java class will bind to the WSDL. +
 • *WSDL first*: specify the location of the WSDL document (URL or file) Mule should use to identify the service interface. Specify both the location and the packageName of the source.
|*payload* |  |  a|
x

 |Specify how much of the message should pass through the proxy. +
• *body*: Mule passes only the body of the message through the proxying Web service. +
• *envelope*: Mule passes the entire envelope of the message, including body and headers, through the proxying Web service.
|*validationEnabled* a|
x

 a|
x

 a|
x

 |True or False. Set to true if you want Mule to perform schema validation on all incoming messages.
|=====

† mutually exclusive attributes

[source, code, linenums]
----
# JAX-WS Service
     
<cxf:jaxws-service doc:name="SOAP" bindingId="StockQuote12" namespace="http://www.webserviceX.net" port="8080" service=" " serviceClass="org.mule.example.bookstore.OrderService" validationEnabled="true"/>
 
     
# Proxy Service
     
<cxf:proxy-service doc:name="SOAP"  port="8080"  serviceClass="org.mule.example.bookstore.OrderService"     payload="body" bindingId=" " namespace=" " service="StockQuoter" validationEnabled="true"/>
----
....
------

== 使用Web服务

本小节介绍如何为您的Web服务客户端指定属性。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
In the *General* tab of the SOAP component's pattern properties panel, configure the Web service client's attributes according to the table below.

[%header,cols="5*"]
|====
|Attribute |Simple client |JAX-WS client |Proxy client |Value
|*Operation* a|
x

 a|
x

 a|
x

 |Specify the operation to invoke on the Web service to which your client will make calls. For example, `createNew`.
|*Service Class* a|
x

 a|
x

 a|
x

 |Specify the Java class CXF should use to construct its service model for the client.
|*Decoupled Endpoint* a|
x

 a|
x

 a|
x

 |Specify the reply-to endpoint (URL) for clients which have http://cxf.apache.org/docs/ws-addressing.html[WS-Addressing] enabled.
|*Client Class* |  a|
x

 |  |Specify the name of the client class that CXF generated using its `wsdl2java` tool.
|*Payload* |  |  a|
x

 |Use the drop down menu to select how much of the message the client passes to the service. (By default, Mule selects `body`.) +
• *body*: Mule passes only the body of the message. +
• *envelope*: Mule passes the whole envelope of the message, including body and headers.
|*Port* |  a|
x

 a|
x

 |_Not_ the TCP port. Specify the WSDL SOAP port name the client must use to communicate with the Web service. Links the binding to the Web service.
|====
....
[tab,title="Studio XML Editor or Standalone"]
....
Configure your cxf:jaxws-client, cxf:`proxy-client`, or cxf:simple-client attributes according to the table below. Refer to the code sample below.

[%header,cols="5*"]
|====
|Attribute |Simple client |JAX-WS client |Proxy client |Field Contents
|*port* |  a|
x

 a|
x

 |_Not_ the TCP port. Specify the WSDL SOAP port name the client must use to communicate with the Web service. Links the binding to the Web service.
|*serviceClass†* a|
x

 a|
x

 a|
x

 |Specify the Java class CXF should use to construct its service model for the client.
|*clientClass†* |  a|
x

 |  |Specify the name of the client class that CXF generated using its `wsdl2java` tool.
|*decoupledEndpoint* a|
x

 a|
x

 a|
x

 |Specify the reply-to endpoint (URL) for clients which have http://cxf.apache.org/docs/ws-addressing.html[WS-Addressing] enabled.
|*operation* a|
x

 a|
x

 a|
x

 |Specify the operation to invoke on the Web service to which your client will make calls. For example, createNew.
|*payload* |  |  a|
x

 |Specify how much of the message the client passes to the service. +
• *body*: Mule passes only the body of the message. +
• *envelope*: Mule passes the whole envelope of the message, including body and headers.
|====

† mutually exclusive

[source, code, linenums]
----
# JAX-WS Client
     
<cxf:jaxws-client doc:name="SOAP"   port="StockQuoter"  serviceClass=" org.mule.example.bookstore.OrderService" clientClass=" " decoupledEndpoint="http://www.StockQuoter.org" enableMuleSoapHeaders="true" operation="createNew"/> 
      
     
# Proxy Client
    
<cxf:proxy-client doc:name="SOAP"   port="8080"  serviceClass="org.mule.example.bookstore.OrderService"  clientClass=" " decoupledEndpoint=" " enableMuleSoapHeaders="true" operation="createNew" payload="body"/>
----
....
------

== 添加自定义拦截器

CXF使用 http://cxf.apache.org/docs/interceptors.html[拦截器]链 - 最基本的处理单元 - 来处理消息。当消息在拦截器链中移动时，每个拦截器都会对消息执行操作，例如读取消息，对消息进行转换或验证消息。

如果您需要为CXF Web服务处理的消息添加额外操作（例如，为消息添加标头），请使用SOAP组件向拦截器链添加额外的拦截器。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Open the *Pattern Properties* panel, then click on the *Interceptors* tab.
. Click on the image:add.png[(plus)] icon to reveal the four **{{1}}** CXF uses to add interceptors to interceptor chains; click one of the choices to add an interceptor provider. +

* `Add in Interceptor`
* `Add in Fault Interceptor`
* `Add out Interceptor`
* `Add out Fault Interceptor`
+
. Double-click the newly created interceptor provider in the *Settings* pane (below, left) to open the interceptor provider panel (below, right).
+
. Use the drop down menu in the *Beans* field to select from your list of existing beans the one that will act as an interceptor.
+

[NOTE]
If you have not yet created any beans, click the *new* button to open a new *Properties Panel* that facilitates the creation and configuration of new a bean, which imports the Java class you have built to specify the interceptor's behavior.

. Click the *add to list* button to insert the selected bean into the interceptor chain.
. Click *Finish*, then *OK* to save your interceptor configurations.
....
[tab,title="Studio XML Editor"]
....
. Above all flows in your Mule project, create a global spring:bean element to import the Java class you have built to specify the interceptor's behavior. Refer to code sample below.
. To the CXF element in your flow, add a child element according to the type of action you want the interceptor to perform:
* cxf:inInterceptor
* cxf:inFaultInterceptor
* cxf:outInterceptor
* cxf:outFaultInterceptor

. As a child element of the CXF interceptor element, add a reference to the spring bean, spring:ref *bean*, you created which imports the Java class.
. Add as many as four interceptor child elements to your CXF service or client component.

[source, xml, linenums]
----
<spring:beans>
    <spring:bean id="Bean" name="Bean" class="org.mule.example.myClass"/>
</spring:beans>
     
    
<flow name="example_flow1" doc:name="example_flow1">
...
    <cxf:proxy-service doc:name="SOAP"   port="8080"  serviceClass="org.mule.example.bookstore.OrderService"  payload="body" bindingId=" " namespace=" " service="" validationEnabled="true">
       <cxf:inInterceptors>
           <spring:ref bean="Bean"/>
       </cxf:inInterceptors> 
    </cxf:proxy-service>
...
</flow>
----
....
------

添加Web服务安全性

*_Enterprise_* +
为了保护Mule流中的CXF Web服务，您可以配置SOAP组件中的元素以应用WS安全性。您可以添加 http://cxf.apache.org/docs/ws-security.html[WS-Security的] *Configuration Elements*（即键值对）来验证和/或验证消息的SOAP标头中的信息;您还可以启用六个*Token Validators*中的一个或多个以确保消息安全。添加这些安全功能的能力仅在企业版Mule Studio中可用。

请参阅 link:/mule-user-guide/v/3.6/enabling-ws-security[启用WS-Security]文档以配置Web服务的安全元素。

== 配置高级元素

您可以根据需要调整多个高级CXF Web服务配置。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Open the *Pattern Properties* panel, then click on the *Advanced* tab.
+
. Adjust configurations as needed according to the table below, then click *OK* to save your changes.

[%header,cols="20,16,16,16,16,16"]
|=======
|Configuration |Simple or JAX-WS Service |Simple or JAX-WS Client |Proxy service |Proxy client |Activity
|*WSDL Location* a|
x

 a|
x

 a|
x

 a|
x

 |In the *WSDL Location* field, enter the URL (relative or absolute) of the http://en.wikipedia.org/wiki/Web_Services_Description_Language[WSDL file] which describes the functionality of the Web service.
|*MTOM Enabled* a|
x

 a|
x

 a|
x

 a|
x

 |Set *MTOM Enabled* to true (i.e. checked) if you want Mule to process the binary data sent as part of a SOAP message. ( http://cxf.apache.org/docs/mtom.html[Message Transmission Optimization Mechanism])
|*Enable Mule Soap headers* a|
x

 a|
x

 a|
x

 a|
x

 |By default, *Enable Mule Soap Headers* is set to true (i.e. checked); this ensures that Mule can add a header to a SOAP message when required as part of the message's processing. Set to false (i.e. unchecked) if you do not want Mule to add headers to SOAP messages. For example, if your SOAP messages will be processed by a third-party schema which prohibits deviations from very specific message properties (such as added Mule headers), deactivate the *Enable Mule Soap Headers* box.
|*Soap 1.1* +
*Soap 1.2* a|
x

 |  a|
x

 |  |Use radio buttons to select the version of SOAP you want your service to use: http://www.w3.org/2003/06/soap11-soap12.html[SOAP 1.1 or SOAP 1.2]. By default, Mule sets the version to SOAP 1.1.
|*Databinding* a|
x

 a|
x

 |  |  |Within the context of the CXF framework, http://cxf.apache.org/docs/data-binding-architecture.html[*data binding*] refers to the mapping of data from XML documents to Java objects. Use the drop down menu to select a data binding type that will meet your configuration requirements: +
 • http://cxf.apache.org/docs/aegis-21.html[aegis-databinding] +
 • http://cxf.apache.org/docs/jaxb.html[jaxb-databinding] +
 • custom-databinding +
 • http://jibx.sourceforge.net/[jibx-databinding]
|*Schema Locations* a|
x

 |  a|
x

 |  |Click the image:add.png[(plus)] icon in the *Schema Locations* pane to specify a `schemaLocations` attribute that identifies a namespace `name` and `description`. Reference http://msdn.microsoft.com/en-us/library/ms256100.aspx[schemaLocation] for additional details.
|=======
....
[tab,title="Studio XML Editor or Standalone"]
....
. Within the context of the CXF framework, http://cxf.apache.org/docs/data-binding-architecture.html[*data binding*] refers to the mapping of data from XML documents to Java objects. You can specify the databinding of your client or service, if you wish. (Not configurable on proxy service or proxy client.) The following are the different types of databinding available:
*  http://cxf.apache.org/docs/aegis-21.html[aegis-databinding] 
*  http://cxf.apache.org/docs/jaxb.html[jaxb-databinding] 
* custom-databinding 
*  http://jibx.sourceforge.net/[jibx-databinding] +

. To the CXF element in your flow, add a child element according to the type of databinding you want your service or client to use:
* cxf:aegis-databinding
* cxf:jaxb-databinding
* cxf:custom-databinding
* cxf:jibx-databinding

. As a child element of the CXF databinding element, add one or more `spring:property` elements with either a name and value, or name and reference, to define any databinding properties. Refer to the code sample below. 
. Define a *`cxf:schemalocations`* attribute, if you wish, to identify a namespace to which your service should refer. (Not configurable on JAX-WS client, simple client or proxy client.) Reference http://msdn.microsoft.com/en-us/library/ms256100.aspx[schemaLocation] for additional details. To the CXF element in your flow (below any interceptor elements, if you have added any), add a **`cxf:schemaLocations`** child element.
. Within the `cxf:schemaLocations` element, add a `cxf:schemaLocation` child element, to specify the URL of the schema to which your service should refer. Refer to code sample below.
. As per your specific needs, configure any of the following CXF service or client attributes according to the table below. Refer to the code sample below.

[%header,cols="20,16,16,16,16,16"]
|======
|Configuration |Simple or JAX-WS Service |Simple or JAX-WS Client |Proxy service |Proxy client |Activity
|*validationEnabled* a|
x

 a|
x

 a|
x

 a|
x

 |When se to true, validationEnabled ensures that Mule can add a header to a SOAP message when required as part of the message's processing. Set to false if you do not want Mule to add headers to SOAP messages. For example, if your SOAP messages will be processed by a third-party schema which prohibits deviations from very specific message properties (such as added Mule headers), set validationEnabled to false.
|*mtomEnabled* a|
x

 a|
x

 a|
x

 a|
x

 |Set mtomEnabled to true if you want Mule to process the binary data sent as part of a SOAP message. ( http://cxf.apache.org/docs/mtom.html[Message Transmission Optimization Mechanism])
|*wsdlLocation* a|
x

 a|
x

 a|
x

 a|
x

 |Enter the URL (relative or absolute) of the http://en.wikipedia.org/wiki/Web_Services_Description_Language[WSDL file] which describes the functionality of the Web service.
|*soapVersion* a|
x

 |  a|
x

 |  |Identify the version of SOAP you want your service to use: http://www.w3.org/2003/06/soap11-soap12.html[SOAP 1.1 or SOAP 1.2]. By default, Mule uses SOAP 1.1.
|======

[source, xml, linenums]
----
<flow name="example_flow1" doc:name="example_flow1">
...
<cxf:jaxws-service doc:name="SOAP"   port="8080"  serviceClass="org.mule.example.bookstore.OrderService"      bindingId=" " namespace=" " service=" " validationEnabled="true" mtomEnabled="true" wsdlLocation="src/main/resources" soapVersion="1.2">
    <cxf:jibx-databinding>
        <spring:property name="sample2" ref="reference"/>
        <spring:property name="sample1" value="value"/>
    </cxf:jibx-databinding>
    <cxf:schemaLocations>
        <cxf:schemaLocation>http://mycompany.com/schemas/stockquotes</cxf:schemaLocation>
    </cxf:schemaLocations>
</cxf:jaxws-service> 
...
</flow>
----
....
------

== 完整的代码示例

.Namespace

[source, xml, linenums]
----
<mule xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf" 
...
xsi:schemaLocation="
...
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd">
----

。示例代码

[source, xml, linenums]
----
<spring:beans>
 
        <spring:bean id="property-placeholder"
 
            class="org.springframework.beans.factory.config.PropertyPlaceholderConfigurer">
 
            <spring:property name="location"
 
                value="classpath:config.dev.properties" />
 
        </spring:bean>
 
 
 
 
    </spring:beans>
 
    <mulexml:namespace-manager
 
        includeConfigNamespaces="true">
 
        <mulexml:namespace prefix="soap" uri="http://schemas.xmlsoap.org/soap/envelope/" />
 
        <mulexml:namespace prefix="mes" uri="http://www.mule-health.com/SOA/message/1.0" />
 
        <mulexml:namespace prefix="mod" uri="http://www.mule-health.com/SOA/model/1.0" />
 
    </mulexml:namespace-manager>
 
    <data-mapper:config name="admit_subject_to_upsert_patient"
 
        transformationGraphPath="admit_subject_to_upsert_patient.grf"
 
        doc:name="DataMapper" />
 
    <data-mapper:config name="upsert_patient_response_to_create_episode"
 
        transformationGraphPath="upsert_patient_response_to_create_episode.grf"
 
        doc:name="DataMapper" />
 
    <object-to-string-transformer name="Object_to_String"
 
        doc:name="Object to String" />
 
    <data-mapper:config name="create_episode_response_to_admit_subject_response"
 
        transformationGraphPath="create_episode_response_to_admit_subject_response.grf"
 
        doc:name="DataMapper" />
 
    <flow name="admitPatientService" doc:name="admitPatientService"
 
        doc:description="AdmssionService SOAP Web service which accepts calls and processes request to perform pre-admissions activities in the hospital's systems.">
 
        <http:inbound-endpoint exchange-pattern="request-response"
 
            host="localhost" port="${http.port}" doc:name="AdmissionService"
 
            path="AdmissionService" />
 
        <cxf:proxy-service doc:name="Proxy service"
 
            namespace="http://www.mule-health.com/SOA/service/admission/1.0"
 
            payload="body" port="AdmissionPort" service="AdmissionService"
 
            wsdlLocation="service/AdmissionService.wsdl" />
 
        <mulexml:dom-to-xml-transformer
 
            returnClass="java.lang.String" />
 
        <flow-ref name="upsertPatient" doc:name="Upsert Patient" />
 
        <flow-ref name="createEpisode" doc:name="Create Episode" />
 
        <data-mapper:transform
 
            config-ref="create_episode_response_to_admit_subject_response"
 
            doc:name="&lt;createEpisodeResponse /&gt; to &lt;admitSubjectResponse /&gt;" />
 
    </flow>
 
    <sub-flow name="upsertPatient" doc:name="upsertPatient" doc:description="Uploads and inserts patient data into a hospital system.">
 
        <data-mapper:transform config-ref="admit_subject_to_upsert_patient"
 
            doc:name="&amp;lt;admitSubject /&amp;gt; to &amp;lt;upsertPatient /&amp;gt;" />
 
        <flow-ref name="invokePatientService" doc:name="Invoke Patient Service" />
 
        <mulexml:dom-to-xml-transformer
 
            returnClass="java.lang.String" />
 
    </sub-flow>
 
    <sub-flow name="invokePatientService" doc:name="invokePatientService" doc:description="Submits calls to the PatientService Web service.">
 
        <cxf:proxy-client payload="body"
 
            enableMuleSoapHeaders="true" doc:name="Proxy client" />
 
        <http:outbound-endpoint exchange-pattern="request-response"
 
            host="localhost" port="${http.port}" path="PatientService" doc:name="PatientService" password="hello123" user="nialdarbey"/>
 
    </sub-flow>
 
    <sub-flow name="createEpisode" doc:name="createEpisode" doc:description="Creates new episodes for patient pre-admission into the hospital systems.">
 
        <data-mapper:transform config-ref="upsert_patient_response_to_create_episode"
 
            doc:name="&amp;lt;upsertPatientResponse /&amp;gt; to &amp;lt;createEpisode /&amp;gt;" />
 
        <flow-ref name="invokeEHRService" doc:name="Invoke EHR Service" />
 
        <mulexml:dom-to-xml-transformer
 
            returnClass="java.lang.String" />
 
    </sub-flow>
 
    <sub-flow name="invokeEHRService" doc:name="invokeEHRService" doc:description="Submits calls to the EHR Web service.">
 
        <cxf:proxy-client payload="body"
 
            enableMuleSoapHeaders="true" doc:name="Proxy client" />
 
        <http:outbound-endpoint exchange-pattern="request-response"
 
            host="localhost" port="${http.port}" path="EHRService" doc:name="EHRService" />
 
    </sub-flow>
 
</mule> 
----


== 另请参阅

*  link:/mule-user-guide/v/3.6/cxf-module-reference[CXF模块]
*  link:/mule-user-guide/v/3.6/enabling-ws-security[安全]

